jenkins/jenkins.RepCon.Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name : jenkins
  labels:
    name: jenkins
spec: 
  ports: 
  - port: 8080
    targetPort: 80
  selector:
    name: jenkins
