jenkins/jenkins.Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: jenkins.qube.zone
    http:
      paths:
      - path:
        backend:
          serviceName: jenkins
          servicePort: 80
